fixed same locations overlapping

--- a/imports/client/stylesheets/variables.scss
+++ b/imports/client/stylesheets/variables.scss
@@ -23,3 +23,4 @@ $menu-color: $white;
 
 // Map
 $map-buttons-bg: $orange;
+$map-events-list-width: 350px;
